--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,18 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel-lang/attributes": "^2.3",
+        "laravel-lang/common": "^3.1",
+        "laravel-lang/http-statuses": "^3.3",
+        "laravel-lang/lang": "^12.24",
         "laravel/breeze": "^1.21",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
         "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "spatie/laravel-ignition": "^2.0",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
