--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "vue": "^3.2.41"
     },
     "dependencies": {
+        "@tabler/icons-vue": "^2.30.0",
         "primevue": "^3.31.0",
         "vue-i18n": "^9.2.2"
     }
