--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "@tabler/icons-vue": "^2.30.0",
+        "pinia": "^2.1.6",
         "primevue": "^3.31.0",
         "vue-i18n": "^9.2.2"
     }
